hphp/hack/test/typecheck/classname/new_abstract_final.php.exp
File "new_abstract_final.php", line 6, characters 3-10:
This would be an object of type Foo which must be instantiable (Typing[4002])
File "new_abstract_final.php", line 5, characters 22-24:
Foo is uninstantiable
File "new_abstract_final.php", line 3, characters 22-24:
Declaration is here
