hphp/hack/test/typecheck/classname/new_abstract_final.php
<?hh

abstract final class Foo {}

function f(classname<Foo> $x) {
  new $x();
}
